--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,15 @@
-server.port=${PORT:8080}
+server.port=${PORT:8081}
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
 
 # Launch the default browser when starting the application in development mode
 vaadin.launch-browser=true
 # PostgreSQL configuration.
-spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username = postgres
-spring.datasource.password = password
-spring.jpa.hibernate.ddl-auto = update
+spring.datasource.url=jdbc:postgresql://localhost:5432/inf
+spring.datasource.username=postgres
+spring.datasource.password=nik160877
+spring.jpa.hibernate.ddl-auto=validate
+spring.liquibase.enabled=true
 # To improve the performance during development.
 # For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
 vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.infohubmvc.application
